<resources>
    <string name="app_name">myMiniBrain</string>

    <string name="user_start_headline">Learn Anything.\nAnywhere</string>
    <string name="user_start_description">Build your foundation and start learning!</string>
    <string name="user_start_question">What will you do?</string>

    <string name="user_start_sellerBtn">Sell Course</string>
    <string name="user_start_buyerBtn">Buy Course</string>

    <string name="signup_label">Sign Up</string>
    <string name="login_label">Log in</string>
    <string name="signup_description">Welcome Sellers\nPlease login to continue</string>
    <string name="register_name">Full Name</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email Address</string>
    <string name="register_password">Password</string>
    <string name="register_confirm">Confirm</string>

    <string name="register_to_login">Already have an account?</string>
    <string name="login_to_register">Create an account</string>


</resources>