<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/returnUserStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_left"
                android:layout_marginEnd="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:textSize="20sp"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_description"/>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_email"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/register_email"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                android:padding="20dp"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:padding="20dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBtn"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:backgroundTint="@color/primary"
                app:cornerRadius="6dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/loginToSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_to_register"
                android:gravity="center"
                />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>